Fix scroll overflow on iOS 14

--- a/src/sundayComponents/sunday-service.sass
+++ b/src/sundayComponents/sunday-service.sass
@@ -375,6 +375,7 @@ body
                 width: 80%
                 position: absolute
                 overflow: scroll
+                -webkit-overflow-scrolling: touch
                 height: 90%
                 display: grid
                 grid-template-rows: 3rem 1fr
